Port from 1.21.1 to 1.20.1
- Update build.gradle/gradle.properties for MC 1.20.1 + Fabric
- Update litematica dependency from 0.19.60 (1.21) to 0.15.4 (1.20.1)
- Update malilib and modmenu to matching 1.20.1 versions
- Update libs/ JAR references
- Fix rendering bug: add highlightMapInitialized flag so HIGHLIGHT_MAP
  is populated on first tick instead of being blocked by empty==empty fingerprint
- Fix performance: gate pumpDataRequests() behind needsContainerData so
  NBT query packets are not sent when filling is disabled
- Fix silent exceptions: replace catch(Exception ignored) with
  catch(Throwable t) and stderr logging in buildSnapshot()
- Remove CrafterBlockEntityMixin (1.21 only shulker box feature)
- Update mixin configs, network payloads, and all API-dependent code
  for 1.20.1 litematica/malilib API